src/test/ui/issues/issue-7970b.stderr
error: unexpected end of macro invocation
  --> $DIR/issue-7970b.rs:13:1
   |
LL | macro_rules! test {}
   | ^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments

error: aborting due to previous error

